# trafic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build-mac.sh  build-win.bat  check.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.iss  trafic.py  trafic.spec
.github/: dependabot.yml
dependabot/: config.yml
installer/windows/: deploy.ps1  properties.rc  properties_tpl.rc  setup.iss
packaging/: README.md
packaging/macos/: app_icon.icns
packaging/scripts/: cleanup_application_tree.py
packaging/windows/: deploy.ps1  properties.rc  setup.iss
trafic/: __init__.py  __main__.py  console.py  constants.py  gui.py  trafic.py  utils.py  worker.py
trafic/updater/: README.md  __init__.py  base.py  utils.py  windows.py
