[metadata]
name = trafic
version = 0.4.0
author = Mickaël 'Tiger-222' Schoentgen
author-email = contact@tiger-222.fr
license = MIT
license_files =
    LICENSE

[options]
include_package_data = True
packages = trafic
python_requires = >=3.6

[options.entry_points]
console_scripts =
    trafic = trafic.__main__:main

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # E722 do not use bare except
    E722
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
